integration_tests/codegen_fail/fail/union/trait_fail_infer_context.stderr
error[E0277]: the trait bound `CustomContext: FromContext<SubContext>` is not satisfied
 --> $DIR/trait_fail_infer_context.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ the trait `FromContext<SubContext>` is not implemented for `CustomContext`
  |
  = note: required by `juniper::FromContext::from`
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> $DIR/trait_fail_infer_context.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ expected struct `CustomContext`, found struct `SubContext`
  |
  = note: expected reference `&CustomContext`
             found reference `&SubContext`
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
